; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/util/extr_fptr_wlist.c_fptr_whitelist_print_func.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/util/extr_fptr_wlist.c_fptr_whitelist_print_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fptr_whitelist_print_func(void (i8*, i8*)* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca void (i8*, i8*)*, align 8
  store void (i8*, i8*)* %0, void (i8*, i8*)** %3, align 8
  %4 = load void (i8*, i8*)*, void (i8*, i8*)** %3, align 8
  %5 = icmp eq void (i8*, i8*)* %4, @config_print_func
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %18

7:                                                ; preds = %1
  %8 = load void (i8*, i8*)*, void (i8*, i8*)** %3, align 8
  %9 = icmp eq void (i8*, i8*)* %8, @config_collate_func
  br i1 %9, label %10, label %11

10:                                               ; preds = %7
  store i32 1, i32* %2, align 4
  br label %18

11:                                               ; preds = %7
  %12 = load void (i8*, i8*)*, void (i8*, i8*)** %3, align 8
  %13 = icmp eq void (i8*, i8*)* %12, @remote_get_opt_ssl
  br i1 %13, label %14, label %15

14:                                               ; preds = %11
  store i32 1, i32* %2, align 4
  br label %18

15:                                               ; preds = %11
  br label %16

16:                                               ; preds = %15
  br label %17

17:                                               ; preds = %16
  store i32 0, i32* %2, align 4
  br label %18

18:                                               ; preds = %17, %14, %10, %6
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local void @config_print_func(i8*, i8*) #1

declare dso_local void @config_collate_func(i8*, i8*) #1

declare dso_local void @remote_get_opt_ssl(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
